# TotalCH8

./: .gitignore  README.md  ch8.h  ch8_ext_roms.h  meson.build
examples/: Chip8.gd  chip8.c
examples/3ds/: Makefile
examples/3ds/src/: main.c
examples/gamecube/: Makefile
examples/gamecube/src/: main.c
examples/nds/: Makefile
examples/nds/src/: main.c
examples/sdl2/: chip8.c  meson.build
examples/switch/native/: Makefile  README.md
examples/switch/native/src/: main.c
examples/vita/: CMakeLists.txt
examples/vita/src/: main.c
src/: ch8.c  ch8.h
tests/: sanity.c
tools/: roms2h.c
